Stock Adjustment Update
-Added products api for stock adjustment
-Can now select products to adjust

--- a/views/stockadjustment/stockadjustment.ejs
+++ b/views/stockadjustment/stockadjustment.ejs
@@ -80,7 +80,7 @@
                                             <tr>
                                                 <td data-label="Product Name" class="custom-mobile-align">
                                                     <div class="col">
-                                                        <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select product" name="product" id="product" />
+                                                        <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select product" name="product" id="product" disabled/>
                                                         <input autocomplete="off" type="hidden" id="productID" name="productID" />
                                                         <div class="custom-dropdown cdw-tableoption" id="productDropdown"></div>
                                                     </div>
