Stock Adjustment Update
-Added insert/save of adjustment
-Added InsertDynamic
-Added save routes
-Fix table display

--- a/views/stockadjustment/stockadjustment.ejs
+++ b/views/stockadjustment/stockadjustment.ejs
@@ -73,7 +73,7 @@
                                                 <th class="col-1 text-left">Product ID</th>
                                                 <th class="col-1 w-10 text-left">Quantity</th>
                                                 <th class="col-1 text-left">Stocks</th>
-                                                <th class="col-1"></th>
+                                                <th class="w-10"></th>
                                             </tr> 
                                         </thead>
                                         
@@ -92,7 +92,7 @@
     
                         <div class="row justify-content-end mt-1">
                             <div class="col-md-4 text-right">
-                                <button type="button" id="submitBtn" class="btn btn-outline-inventory w-40">
+                                <button type="button" id="adjustBtn" class="btn btn-outline-inventory w-40">
                                     <span id="btnIcon"><i class="fa fa-plus" aria-hidden="true"></i> Adjust</span>
                                     <span id="btnSpinner" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
                                 </button>
@@ -159,10 +159,11 @@
                                 <tr>
                                     <th class="w-10 h5">ID</th>
                                     <th class="text-left h5">Branch</th>
-                                    <th class="text-left h5">Adjustment Type</th>
+                                    <th class="text-left h5">Type</th>
                                     <th class="text-left h5">Created Date</th>
                                     <th class="text-left h5">Created By</th>
                                     <th class="text-left h5">Status</th>
+                                    <th class="w-30"></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -173,7 +174,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card inventory-card">
-                        <div class="row ml-2 mt-2">
+                        <div class="row ml-2 mt-3">
                             <div class="col-md-12">
                                 <span class="h5 label-title">
                                     ID: 
@@ -203,3 +204,5 @@
             </div>
         </div>
     </div>
+
+    
